@@ -52,7 +52,7 @@ WebInspector.ConsoleMessageImpl = function(source, level, message, linkifier, ty
     this.source = source;
     this.type = type || WebInspector.ConsoleMessage.MessageType.Log;
     this.level = level;
-    this.line = line || -1;
+    this.line = line || 0;
     this.url = url || null;
     repeatCount = repeatCount || 1;
     this.repeatCount = repeatCount;
